--- a/Personal/Modals/assets/css/global.css
+++ b/Personal/Modals/assets/css/global.css
@@ -292,7 +292,7 @@ body.mix {
   top: -70px;
   visibility: visible;
   opacity: 1;
-  transition: top 300ms 400ms, opacity 300ms 400ms;
+  transition: top 300ms cubic-bezier(0.06, 0.4, 0.27, 0.92) 400ms, opacity 300ms 400ms;
 }
 
 h1 {
@@ -309,6 +309,26 @@ h1 {
 p {
   color: #777;
   margin-top: 90px;
+}
+
+.wrapper {
+  min-height: 100%;
+  width: 100%;
+  min-width: 100%;
+}
+
+.boxes {
+  min-height: 100%;
+  min-width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.boxes li {
+  display: inline-block;
+  width: 25%;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 /*# sourceMappingURL=global.css.map */
