--- a/Personal/Modals/assets/css/global.css
+++ b/Personal/Modals/assets/css/global.css
@@ -4,17 +4,21 @@
     transform: scale(0);
     opacity: 0;
   }
+
   10% {
     opacity: .4;
   }
+
   90% {
     opacity: .4;
   }
+
   100% {
     transform: scale(1);
     opacity: 0;
   }
 }
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -25,6 +29,13 @@ body, html {
   font-size: 100%;
   padding: 0;
   margin: 0;
+}
+
+body.gobbble {
+  background: url(http://f.cl.ly/items/3F2e1j2x2X0X1u3j3k09/DSC00831.jpg);
+  background-size: cover;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  height: 100%;
 }
 
 body.pict {
@@ -312,6 +323,7 @@ p {
 }
 
 .wrapper {
+  height: 100%;
   min-height: 100%;
   width: 100%;
   min-width: 100%;
@@ -319,17 +331,86 @@ p {
 }
 
 .boxes {
-  min-height: 100%;
-  min-width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  height: 100%;
+  width: 100%;
+  margin-left: 1%;
+  overflow: hidden;
+  position: relative;
+  -webkit-backface-visibility: hidden;
 }
 
 .boxes li {
-  display: inline-block;
+  position: fixed;
+  display: block;
+  background: rgba(255, 255, 255, 0.85);
   width: 25%;
-  background: rgba(255, 255, 255, 0.5);
+  height: 50%;
+  top: 0%;
+  padding-top: 1%;
+  padding-left: 1%;
+}
+.boxes li.one, .boxes li.five {
+  left: 0%;
+}
+.boxes li.two, .boxes li.six {
+  left: 25%;
+}
+.boxes li.three, .boxes li.seven {
+  left: 50%;
+}
+.boxes li.four, .boxes li.eight {
+  left: 75%;
+}
+.boxes li.bottom-half {
+  top: 50%;
 }
 
-/*# sourceMappingURL=global.css.map */
+.boxes li.one {
+  z-index: 1;
+}
+
+.boxes li.two {
+  z-index: 2;
+}
+
+.boxes li.three {
+  z-index: 3;
+}
+
+.boxes li.three:hover {
+  z-index: 3;
+  background: #000;
+}
+
+.boxes li.four {
+  z-index: 4;
+}
+
+.boxes li.five {
+  z-index: 5;
+}
+
+.boxes li.six {
+  z-index: 6;
+}
+
+.boxes li.seven {
+  z-index: 7;
+}
+
+.boxes li.eight {
+  z-index: 8;
+}
+
+.boxes li:hover {
+  background: white;
+  cursor: pointer;
+}
+
+.boxes li img {
+  width: 100%;
+}
+
+.boxes p, .boxes h2 {
+  margin-top: 20px;
+}
