--- a/Personal/Modals/assets/css/global.scss
+++ b/Personal/Modals/assets/css/global.scss
@@ -29,6 +29,13 @@ body, html {
   margin: 0;
 }
 
+body.gobbble {
+  background: url(http://f.cl.ly/items/3F2e1j2x2X0X1u3j3k09/DSC00831.jpg);
+  background-size: cover;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  height: 100%;
+}
+
 body.pict {
   background: url(http://f.cl.ly/items/3F2e1j2x2X0X1u3j3k09/DSC00831.jpg);
   background-size: cover;
@@ -314,9 +321,10 @@ p {
   margin-top: 90px;
 }
 
-//// BOXES CSS
+//// GOBBBLE CSS
 
 .wrapper {
+  height: 100%;
   min-height: 100%;
   width: 100%;
   min-width: 100%;
@@ -324,16 +332,94 @@ p {
 }
 
 .boxes {
-  min-height: 100%;
-  min-width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  height: 100%;
+  width: 100%;
+  margin-left: 1%;
+  overflow: hidden;
+  position: relative;
+  -webkit-backface-visibility: hidden;
 }
 
 .boxes li {
-  display: inline-block;
+  position: fixed;
+  display: block;
+  background: rgba(255,255,255, .85);
   width: 25%;
-  background: rgba(255,255,255,.5);
+  height: 50%;
+  top: 0%;
+  padding-top: 1%;
+  padding-left: 1%;
+
+  &.one, &.five {
+    left: 0%;
+  }
+
+  &.two, &.six {
+    left: 25%;
+  }
+
+  &.three, &.seven {
+    left: 50%;
+  }
+
+  &.four, &.eight {
+    left: 75%;
+  }
+
+  &.bottom-half {
+    top: 50%;
+  }
 }
+
+.boxes li.one {
+  z-index: 1;
+}
+
+.boxes li.two {
+  z-index: 2;
+}
+
+.boxes li.three {
+  z-index: 3;
+}
+
+.boxes li.three:hover {
+  z-index: 3;
+  background: #000;
+}
+
+.boxes li.four {
+  z-index: 4;
+}
+
+.boxes li.five {
+  z-index: 5;
+}
+
+.boxes li.six {
+  z-index: 6;
+}
+
+.boxes li.seven {
+  z-index: 7;
+}
+
+.boxes li.eight {
+  z-index: 8;
+}
+
+.boxes li:hover {
+  background: rgba(255,255,255,1);
+  cursor: pointer;
+}
+
+.boxes li img {
+  width: 100%;
+}
+
+.boxes p, .boxes h2 {
+  margin-top: 20px;
+}
+
+
 
