--- a/Personal/Modals/assets/css/global.css
+++ b/Personal/Modals/assets/css/global.css
@@ -4,21 +4,17 @@
     transform: scale(0);
     opacity: 0;
   }
-
   10% {
     opacity: .4;
   }
-
   90% {
     opacity: .4;
   }
-
   100% {
     transform: scale(1);
     opacity: 0;
   }
 }
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -36,6 +32,7 @@ body.gobbble {
   background-size: cover;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   height: 100%;
+  width: 100%;
 }
 
 body.pict {
@@ -333,9 +330,10 @@ p {
 .boxes {
   height: 100%;
   width: 100%;
-  margin-left: 1%;
+  min-height: 100%;
+  margin-left: 0;
   overflow: hidden;
-  position: relative;
+  position: absolute;
   -webkit-backface-visibility: hidden;
 }
 
@@ -346,8 +344,7 @@ p {
   width: 25%;
   height: 50%;
   top: 0%;
-  padding-top: 1%;
-  padding-left: 1%;
+  padding: 1%;
 }
 .boxes li.one, .boxes li.five {
   left: 0%;
@@ -414,3 +411,5 @@ p {
 .boxes p, .boxes h2 {
   margin-top: 20px;
 }
+
+/*# sourceMappingURL=global.css.map */
