--- a/Mixpanel/Marketing Style Guide/assets/css/global.scss
+++ b/Mixpanel/Marketing Style Guide/assets/css/global.scss
@@ -254,7 +254,7 @@ h6 {
 }
 
 p {
-    width: 80%;
+    font-family: $source;
     font-weight: 300;
     font-size: 18px;
     line-height: 21px;
@@ -283,6 +283,12 @@ header {
     top: 0;
     z-index: 1;
     background: rgba(0,0,0,0.25);
+    transition: top 150ms;
+}
+
+header.hide {
+    top: -80px;
+    transition: top 150ms;
 }
 
 .mainlogo {
@@ -406,11 +412,6 @@ footer p {
     display: block;
 }
 
-.icon {
-    margin: 0 auto 18px;
-    display: block;
-}
-
 .centered {
 	text-align: center;
 }
@@ -420,6 +421,9 @@ footer p {
     min-height: 100%;
     position: absolute;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-size: cover;
     @include deep_blue_grad;
 }
@@ -445,278 +449,123 @@ footer p {
 
 .hero .left {
     width: 42.5%;
-    border-right: 2px solid #fff;
     text-align: right;
-    padding: 400px 70px 0 0;
+    padding: 0 70px 0 0;
 }
 
 .hero .right {
     width: 57.5%;
-    padding: 335px 0 0 67px;
+    padding: 25px 0 0 67px;
+}
+
+.bar {
+    align-self: flex-start;
+    width: 2px;
+    background: #fff;
+    top: 0;
+    left: 42%;
+    margin: 0;
+    padding: 0;
 }
 
 .herologo {
     width: 300px;
 }
 
-.download {
-    display: inline-block;
-    padding: 0.45em 2em 0.7em;
-    color: #7C7D78;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 700;
-    border-radius: 4px;
-}
-
 footer {
     padding: 10px 0;
+    display: none;
 }
 
 /* @group Colors */
 
 /********* PRIMARY **********/
 
-.baygreen {
+.slate {
+    color: $slate;
 }
 
-.cozyorange {
+.blue {
+    color: $blue;
+}
+
+.gray {
+    color: $gray;
+}
+
+.light_gray {
+    color: $light_gray;
+}
+
+.slate_bg {
+    background: $slate;
+}
+
+.blue_bg {
+    background: $blue;
+}
+
+.gray_bg {
+    background: $gray;
+}
+
+.light_gray_bg {
+    background: $light_gray;
 }
 
 /********* SECONDARY **********/
 
-.fireside {
+.purple {
+    color: $purple;
 }
 
-.trumpet {
+.medium_blue {
+    color: $medium_blue;
 }
 
-.pacific {
+.sage_green {
+    color: $sage_green;
 }
 
-.clay {
+.red {
+    color: $red;
 }
 
-.mahogany {
+.orange {
+    color: $orange;
 }
 
-.charcoal {
+.yellow {
+    color: $yellow;
 }
 
-/********* Elements **********/
-
-#color-palette {
-    padding: 80px 0 40px;
+.purple_bg {
+    background: $purple;
 }
 
-.color-segment {
-    width: 100%;
-    padding: 35px 0;
-    text-align: center;
-
-    ul {
-        margin: 0 auto;
-        width: 100%;
-        padding: 0;
-        list-style: none;
-        display: block;
-
-        p {
-            width: 100%;
-            text-align: center;
-            font-size: 11px;
-            font-weight: 500;
-            color: #999;
-            margin: 0;
-            line-height: 17px;
-
-            label {
-                text-align: right;
-                width: 30px;
-                display: inline-block;
-                margin-right: 8px;
-                cursor: pointer;
-            }
-
-            input[type=text] {
-                width: 68px;
-                border: none;
-                border-radius: 3px;
-                outline: none;
-                background: none;
-                font-size: 12px;
-                padding: 0;
-                color: #888;
-                margin: 0;
-                cursor: text;
-                text-transform: uppercase;
-            }
-        }
-    }
-
-    li {
-        margin: 7px 5px;
-        display: inline-block;
-        background: #fff;
-        box-shadow: 0 0 6px rgba(0,0,0,.25);
-        -moz-box-shadow: 0 0 6px rgba(0,0,0,.25);
-        @include twosecs;
-
-        &:hover {
-            @include twosecs;
-            box-shadow: none;
-            -moz-box-shadow: none;
-        }
-    }
-
-    .primary {
-        width: 200px;
-        padding: 0 0 15px 0;
-    }
-
-    .secondary {
-        width: 150px;
-        padding: 0 0 15px 0;
-    }
-
-    .tertiary {
-        width: 140px;
-        padding: 0 0 15px 0;
-    }
-
-    .specialized {
-        width: 140px;
-        padding: 0 0 15px 0;
-    }
-
-    figure {
-        padding: 0;
-        margin: 0;
-    }
-
-    .color {
-        width: 100%;
-        height: 45px;
-        margin-bottom: 17px;
-    }
-
-    .name {
-        margin: 0 auto 8px;
-        font-size: 13px;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
+.medium_blue_bg {
+    background: $medium_blue;
 }
 
-#typography {
-    padding: 80px 0 40px;
+.sage_green_bg {
+    background: $sage_green;
 }
 
-.type-segment {
-    width: 100%;
-    padding: 35px 0;
-    text-align: center;
-
-    .typeface {
-        margin: 0 auto;
-    }
-
-    p {
-        margin-bottom: 25px;
-    }
-
-    ul {
-        margin: 0 auto 22px;
-        width: 100%;
-        padding: 0;
-        list-style: none;
-        display: block;
-
-        p {
-            width: 100%;
-            text-align: center;
-            font-size: 18px;
-            font-weight: 500;
-            margin: 0;
-            line-height: 23px;
-
-            &.caps {
-                text-transform: uppercase;
-            }
-        }
-    }
-
-    li {
-        width: 70%;
-        margin: 0 auto;
-        padding: 20px;
-        border-radius: 5px;
-
-        &.proxima {
-        }
-
-        &.frutiger {
-        }
-
-        &.source {
-        }
-
-        &.droid {
-        }
-    }
+.red_bg {
+    background: $red;
 }
 
-#brand {
-    padding: 80px 0 0;
+.orange_bg {
+    background: $orange;
 }
 
-.logo-segment {
-    width: 100%;
-    padding: 35px 0;
-    text-align: center;
-
-    .logo {
-        margin: 0 auto;
-    }
-
-    p {
-        margin-bottom: 25px;
-    }
-
-    ul {
-        margin: 0 auto 40px;
-        width: 100%;
-        padding: 0;
-        list-style: none;
-        display: block;
-        text-align: center;
-
-        p {
-            width: 100%;
-            text-align: center;
-            font-size: 18px;
-            font-weight: 500;
-            margin: 0;
-            line-height: 23px;
-
-            &.caps {
-                text-transform: uppercase;
-            }
-        }
-    }
-
-    li {
-        width: 300px;
-        margin: 10px;
-        display: inline-block;
-
-        img {
-            display: block;
-            margin: 0 auto 28px;
-        }
-    }
+.yellow_bg {
+    background: $yellow;
 }
+
+/********* Pages **********/
+
+
 
 /* @end */
 
