--- a/Mixpanel/Marketing Style Guide/assets/css/global.scss
+++ b/Mixpanel/Marketing Style Guide/assets/css/global.scss
@@ -405,7 +405,7 @@ menu ul li a {
     transition: top 350ms;
 }
 
-.hero_scrolled {
+.hero.slide {
     top: -1600px;
     transition: top 350ms;
 }
