--- a/Mixpanel/Marketing Style Guide/assets/css/global.scss
+++ b/Mixpanel/Marketing Style Guide/assets/css/global.scss
@@ -36,14 +36,14 @@ body {
  */
 
 ::-moz-selection {
-    background: #000;
-    color: #FFF;
+    background: #fff400;
+    color: #25282B;
     text-shadow: none;
 }
 
 ::selection {
-    color: #FFF;
-    background: #000;
+    color: #25282B;
+    background: #fff400;
     text-shadow: none;
 }
 
@@ -554,8 +554,13 @@ footer p span.page {
     width: 100%;
 }
 
-p.desc {
+.desc {
     line-height: 0;
+}
+
+.desc span {
+    display: inline;
+    color: $gray;
 }
 
 #colors input[type=text] {
@@ -571,6 +576,11 @@ p.desc {
 
 .color figure {
     text-align: center;
+}
+
+#colors input[type=text].gradinput {
+    display: inline-block;
+    width: 60px;
 }
 
 /* PRIMARY COLOR STYLES */
@@ -618,12 +628,11 @@ p.desc {
 /* SECONDARY COLOR STYLES */
 
 .secondary {
-
+    margin-bottom: 75px;
 }
 
 .secondary figure {
     flex: 1;
-    width: 19%;
     float: left;
     margin: 0 3%;
 }
@@ -666,6 +675,58 @@ p.desc {
 }
 
 /* @end Left Area
+
+/* GRADIENT COLOR STYLES */
+
+.gradient {
+    // margin-bottom: 75px;
+}
+
+.gradient figure {
+    flex: 1;
+    float: left;
+    margin: 0 3%;
+    background: #fff;
+}
+
+.gradient figure.gradient_color {
+    display: block;
+    margin-top: 40px;
+}
+
+.gradient_color .color {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    border-radius: 50em;
+    padding-top: 100%;
+}
+
+.gradient_color.purple_grad .color {
+    @include purple_grad;
+}
+
+.gradient_color.deep_blue_grad .color {
+    @include deep_blue_grad;
+}
+
+.gradient_color.green_grad .color {
+    @include green_grad;
+}
+
+.gradient_color.mars_grad .color {
+    @include mars_grad;
+}
+
+.gradient_color.orange_grad .color {
+    @include orange_grad;
+}
+
+.gradient_color.cold_blue_grad .color {
+    @include cold_blue_grad;
+}
+
+/* GRADIENT COLOR STYLES */
 
 /* @group Colors */
 
@@ -756,6 +817,8 @@ p.desc {
 .yellow_bg {
     background: $yellow;
 }
+
+/********* GRADIENTS **********/
 
 /********* Pages **********/
 
