--- a/Mixpanel/Marketing Style Guide/assets/css/global.scss
+++ b/Mixpanel/Marketing Style Guide/assets/css/global.scss
@@ -221,26 +221,32 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: 46px;
+    line-height: 54px;
 }
 
 h2 {
     font-size: 30px;
+    line-height: 38px;
 }
 
 h3 {
     font-size: 24px;
+    line-height: 32px;
 }
 
 h4 {
     font-size: 18px;
+    line-height: 26px;
 }
 
 h5 {
     font-size: 16px;
+    line-height: 24px;
 }
 
 h6 {
     font-size: 14px;
+    line-height: 18px;
 }
 
 p {
@@ -488,6 +494,11 @@ menu ul li a {
     transition: background 250ms;
 }
 
+.left_area.typography {
+    @include cold_blue_grad;
+    transition: background 250ms;
+}
+
 footer {
     width: 87%;
     padding: 15px 0 0 0;
@@ -512,7 +523,7 @@ footer p span.page {
 
 /* @end Left Area
 
-/* @group Left Area */
+/* @group Right Area */
 
 .right_area {
     width: 68%;
@@ -545,7 +556,7 @@ footer p span.page {
     text-align: center;
 }
 
-.section {
+.flex {
     display: flex;
 }
 
@@ -674,8 +685,6 @@ footer p span.page {
     background: $yellow;
 }
 
-/* @end Left Area
-
 /* GRADIENT COLOR STYLES */
 
 .gradient {
@@ -727,6 +736,37 @@ footer p span.page {
 }
 
 /* GRADIENT COLOR STYLES */
+
+/* @group TYPOGRAPHY */
+
+.headings {
+    margin: 5% 0 10%;
+}
+
+#typography .section figure {
+    padding: 0 3%;
+    margin: 0;
+    width: 80%;
+}
+
+#typography .section figure h3 {
+    padding: 0;
+}
+
+#typography .section figure h1,
+#typography .section figure h2,
+#typography .section figure h3,
+#typography .section figure h4 {
+    margin: 0;
+}
+
+#typography .section figure h5 {
+    margin: 50px 0 20px 0;
+}
+
+/* @end TYPOGRAPHY */
+
+/* @end Right Area */
 
 /* @group Colors */
 
