--- a/Mixpanel/Marketing Style Guide/assets/css/global.scss
+++ b/Mixpanel/Marketing Style Guide/assets/css/global.scss
@@ -277,14 +277,16 @@ header {
     height: 75px;
     position: fixed;
     top: 0;
-    z-index: 1;
-    background: rgba(0,0,0,0.25);
-    transition: top 150ms;
+    z-index: 2;
+    // needs latest Compass, add '@import "compass"' to your scss
+    @include filter-gradient(#ffffff, #ffffff, horizontal); // IE6-9
+    @include background-image(linear-gradient(left,  rgba(255,255,255,0) 33%,rgba(255,255,255,0.85) 33%));
+    transition: top 250ms 200ms;
 }
 
 header.hide {
     top: -80px;
-    transition: top 150ms;
+    transition: top 250ms 200ms;
 }
 
 .mainlogo {
@@ -307,14 +309,6 @@ menu {
     padding: 0;
     height: 75px;
     float: right;
-
-    &.scroll-to-fixed-fixed {
-        background: rgba(255,255,255,.9);
-        position: fixed;
-        top: 0;
-        -webkit-box-shadow: 0 0 3px rgba(0,0,0,.25);
-    }
-
 }
 
 menu ul {
@@ -334,25 +328,25 @@ menu ul li {
 menu ul li a {
     text-decoration: none;
     display: block;
-    padding: 27px 0 26px;
+    padding: 24px 0 27px;
     margin: 0 25px;
     font-size: 13px;
     font-weight: 900;
     border-bottom: none;
     font-family: $brandon;
-    color: rgba(255,255,255,.2);
+    color: rgba($slate,.2);
     text-transform: uppercase;
     transition: color 150ms;
 
     &:hover {
-        color: rgba(255,255,255,1);
+        color: rgba($slate,1);
         transition: color 150ms;
     }
 
     &:active,
     &.active {
-        color: rgba(255,255,255,1);
-        border-bottom: 3px solid $blue;
+        color: rgba($slate,1);
+        border-top: 3px solid $blue;
     }
 }
 
@@ -479,6 +473,10 @@ menu ul li a {
     margin: 0 13%;
 }
 
+.left_area {
+    transition: background-image 250ms;
+}
+
 .left_area h1 {
     color: rgba(255,255,255,1);
     margin-bottom: 15px;
@@ -491,12 +489,12 @@ menu ul li a {
 
 .left_area.colors {
     @include mars_grad;
-    transition: background 250ms;
+    transition: background-image 250ms;
 }
 
 .left_area.typography {
     @include cold_blue_grad;
-    transition: background 250ms;
+    transition: background-image 250ms;
 }
 
 footer {
@@ -536,7 +534,7 @@ footer p span.page {
 
 .right_area section {
     width: 100%;
-    padding: 5% 3%;
+    padding: 10% 3%;
 }
 
 .right_area h3 {
