--- a/Mixpanel/Marketing Style Guide/assets/css/global.scss
+++ b/Mixpanel/Marketing Style Guide/assets/css/global.scss
@@ -762,6 +762,13 @@ footer p span.page {
     margin: 50px 0 20px 0;
 }
 
+#typography .section figure p {
+    text-align: left;
+    width: 100%;
+    padding: 0;
+    margin: 20px 0;
+}
+
 /* @end TYPOGRAPHY */
 
 /* @end Right Area */
