--- a/Mixpanel/New UI/assets/css/global.css
+++ b/Mixpanel/New UI/assets/css/global.css
@@ -13,6 +13,18 @@ body, html {
   background: #f0f4f7;
 }
 
+/************ Typography STUFF ***********/
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", sans-serif;
+}
+
+h4 {
+  font-size: 12px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #ccd5d8;
+}
+
 #pagewrap {
   width: 100%;
   height: 100%;
@@ -34,15 +46,18 @@ body, html {
 header {
   width: 100%;
   height: 71px;
+  background: #f7fafc;
   border-bottom: 1px solid #e3e5ea;
   align-self: flex-start;
+  position: relative;
+  z-index: 1;
 }
 
 .avatar {
   width: 71px;
   height: 70px;
   color: #fff;
-  font: 700 20px/20px "Montserrat", sans-serif;
+  font: 400 20px/20px "Montserrat", sans-serif;
   text-align: center;
   position: absolute;
   top: 0;
@@ -73,7 +88,7 @@ header {
 .project {
   width: 200px;
   height: 70px;
-  font: 15px/23px "Muli", sans-serif;
+  font: 14px/23px "Muli", sans-serif;
   color: #ccd5d8;
   font-weight: bolder;
   border-right: 1px solid #e3e5ea;
@@ -84,6 +99,7 @@ header {
   padding: 0 0 0 15px;
   align-items: center;
   margin-left: 71px;
+  background: #f7fafc;
 }
 .project:hover {
   background: white;
@@ -158,13 +174,98 @@ header {
   left: 20px;
 }
 
-nav {
+aside {
   width: 71px;
   height: 100%;
-  border-right: 1px solid #e3e5ea;
-  position: absolute;
+  position: fixed;
   left: 0;
-  top: 0;
+  top: 71px;
+  cursor: pointer;
+  z-index: 1;
+  background: #f7fafc;
 }
 
-/*# sourceMappingURL=global.css.map */
+aside:hover {
+  background: white;
+}
+
+.drawer {
+  width: 201px;
+  margin: 0 0 0 -129px;
+  height: 100%;
+  padding: 10px 0 35px 15px;
+  border-right: 1px solid #e3e5ea;
+  display: flex;
+  transition: margin 500ms cubic-bezier(0, 0.49, 0.52, 0.905);
+}
+
+aside:hover .drawer {
+  margin: 0 0 0 71px;
+  background: white;
+  transition: margin 500ms cubic-bezier(0, 0.49, 0.52, 0.905);
+}
+
+aside:hover nav {
+  opacity: 1;
+  transition: opacity 400ms 250ms;
+}
+
+aside nav {
+  width: 100%;
+  display: block;
+  opacity: 0;
+  transition: opacity 400ms 100ms;
+}
+
+aside nav h4 {
+  margin: 25px 0 15px;
+  font-weight: 400;
+}
+
+aside nav span {
+  display: block;
+  height: 1px;
+  background: #ccd5d8;
+  width: 100%;
+  margin: 25px 0 0;
+}
+
+.drawer nav a {
+  font: 14px/30px "Muli", sans-serif;
+  text-decoration: none;
+  color: #8c989e;
+  display: block;
+  padding-left: 30px;
+}
+
+.drawer nav a:hover {
+  color: #15a4fa;
+  border-right: 3px solid #15a4fa;
+}
+
+.reports {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  padding: 130px 150px;
+  width: 100%;
+  height: 100%;
+  transition: background 500ms 3000ms;
+}
+
+.reports:hover {
+  background: white;
+  transition: background 500ms;
+}
+
+.reports p {
+  font: 15px/23px "Muli", sans-serif;
+  color: #ccd5d8;
+  transition: color 300ms 3000ms;
+}
+
+.reports:hover p {
+  color: #8c989e;
+  transition: color 500ms;
+}
