--- a/Mixpanel/New UI/assets/css/global.scss
+++ b/Mixpanel/New UI/assets/css/global.scss
@@ -179,55 +179,42 @@ header {
 	}
 }
 
-aside {
-	width: 71px;
-	height: 100%;
-	position: fixed;
-	left: 0;
-	top: 71px;
-	cursor: pointer;
-	z-index: 1;
-	background: $body_grey;
-}
-
-aside:hover {
-	background: $white;
-}
-
 .drawer {
-	width: 201px;
-	margin: 0 0 0 -129px;
+	width: 271px;
+	margin: 0 0 0 -200px;
 	height: 100%;
-	padding: 10px 0 35px 15px;
+	padding: 71px 0 35px 86px;
 	border-right: 1px solid $border_grey;
 	display: flex;
-	transition: margin 500ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
+	position: fixed;
+	background: $body_grey;
+	transition: margin 500ms cubic-bezier(0.000, 0.490, 0.520, 0.905), background 250ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
 }
 
-aside:hover .drawer {
-	margin: 0 0 0 71px;
+.drawer:hover  {
+	margin: 0 0 0 0;
 	background: $white;
-	transition: margin 500ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
+	transition: margin 500ms, cubic-bezier(0.000, 0.490, 0.520, 0.905), background 250ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
 }
 
-aside:hover nav {
+.drawer:hover nav {
 	opacity: 1;
 	transition: opacity 400ms 250ms;
 }
 
-aside nav {
+.drawer nav {
 	width: 100%;
 	display: block;
 	opacity: 0;
 	transition: opacity 400ms 100ms;
 }
 
-aside nav h4 {
+.drawer nav h4 {
 	margin: 25px 0 15px;
 	font-weight: 400;
 }
 
-aside nav span {
+.drawer nav span {
 	display: block;
 	height: 1px;
 	background: $light_grey;
@@ -256,7 +243,7 @@ aside nav span {
 	padding: 130px 150px;
 	width: 100%;
 	height: 100%;
-	transition: background 500ms 3000ms;
+	transition: background 500ms 2200ms;
 }
 
 .reports:hover {
@@ -264,10 +251,16 @@ aside nav span {
 	transition: background 500ms;
 }
 
+.content {
+	display: block;
+	position: relative;
+}
+
 .reports p {
 	font: 15px/23px $copy;
 	color: $light_grey;
-	transition: color 300ms 3000ms;
+	transition: color 300ms 2200ms;
+	margin-bottom: 25px;
 }
 
 .reports:hover p {
